fix api User